fixed about spacing on resize and skills section logos

--- a/site.css
+++ b/site.css
@@ -78,7 +78,7 @@ body,p,h1,h2,h3,h4,h5,h6 {
 }
 .personal-row .headshot {
 	background-color: rgb(231,231,231);
-	padding: 75px 50px;
+	padding: 75px 0px;
 }
 .personal-row .headshot img {
 	display: block;
@@ -89,8 +89,7 @@ body,p,h1,h2,h3,h4,h5,h6 {
 	margin-right: auto;
 }
 .personal-row .text {
-	padding: 30px;
-	margin: 30px;
+	padding: 60px;
 	font-size: 15px;
 }
 
@@ -121,21 +120,20 @@ body,p,h1,h2,h3,h4,h5,h6 {
 /*SKILLS ROW*/
 
 .skills-row {
-	padding-bottom: 50px;
+	padding-bottom: 75px;
 }
 .skills-row .skills {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-	padding: 20px;
-	margin: 20px;
+	margin: 10px auto;
 	border: 5px solid rgb(231,231,231);
 }
 .skills-row span {
 	font-size: 40px;
 	padding: 15px;
-	margin: 15px 50px;
+	margin: 15px 200px;
 	border: 3px solid rgb(231,231,231);
 	border-radius: 50%;
 	background-color: white;
@@ -144,6 +142,6 @@ body,p,h1,h2,h3,h4,h5,h6 {
 .skills-row h2 {
 	text-align: center;
 	font-size: 20px;
-	padding: 15px 0px;
+	padding: 15px;
 
 }
